clusters/home/infrastructure/kured/kured-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkding-ingress
  namespace: linkding
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  rules:
  - host: linkding.bytechance.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: linkding
            port:
              number: 9090
  tls:
  - hosts:
    - linkding.bytechance.dev
    secretName: linkding-tls
